--- a/components/_contentmenuhamburger.scss
+++ b/components/_contentmenuhamburger.scss
@@ -53,10 +53,10 @@
             margin: 20px 0;
             cursor: pointer;
             &:hover a {
-              color: #21dcfd;
+              color: #2c84d4;
             }
             &:hover i {
-              color: rgb(33, 220, 253);
+              color: #2c84d4;
             }
             a {
               color: #000;
@@ -82,7 +82,7 @@
           background: #fff;
           border-radius: 50%;
           box-shadow: 0 5px 15px -5px #00000070;
-          color: #21dcfd;
+          color: #2c84d4;
           overflow: hidden;
           position: relative;
           display: flex;
@@ -101,7 +101,7 @@
             position: absolute;
             width: 120%;
             height: 120%;
-            background: #21dcfd;
+            background: #2c84d4;
             transform: rotate(45deg);
             left: -110%;
             top: 90%;
@@ -123,7 +123,7 @@
   display: block;
   height: 100vh;
   max-width: 650px;
-  background-color: #fafafa;
+  background-color: rgb(243, 243, 243);
   position: fixed;
   top: 0;
   right: 0;
