--- a/components/_header.scss
+++ b/components/_header.scss
@@ -1,8 +1,8 @@
 @import '../abstract/variables';
 
 header {
-    background-color: $color-bg;
-    max-width: 1300px;
+    background-color: #f5f5f5;
+    max-width: 1400px;
     width: 100%;
     margin: 0 auto;
     padding: 1.5rem 1rem;
@@ -77,7 +77,6 @@ header {
             cursor: pointer;
             justify-content: center;
             align-items: center;
-            padding-right: 7.5rem;
             span {
                 width: 50px;
                 height: 3px;
