--- a/components/_main.scss
+++ b/components/_main.scss
@@ -1,8 +1,8 @@
 @import '../abstract/reset';
 
 main {
-    background-color: $color-bg;
-    max-width: 1300px;
+    background-color: #f5f5f5;
+    max-width: 1400px;
     width: 100%;
     margin: 0 auto;
     padding: 1.5rem 1rem;
@@ -10,16 +10,16 @@ main {
     position: relative;
     .mainsize {
         padding: 12rem 0rem;
-
         display: flex;
         justify-content: center;
+        align-items: center;
         .textmain {
             width: 100%;
-            margin-right: 3rem;
+            height: 30%;
             display: flex;
             flex-direction: column;
             h1 {
-                font-size: 3rem;
+                font-size: 3.5rem;
                 font-weight: 600;
                 animation: animationTextShow 2s forwards;
                 color: $color-dark;
@@ -32,22 +32,25 @@ main {
                 max-width: 60ch;
                 line-height: 1.4;
                 font-size: 1.2rem;
-                animation: animationTextShow 2.3s forwards;
+                animation: animationTextShow 2s forwards;
                 color: #525252;
             }
             .divmain {
                 display: flex;
                 align-items: center;
-                gap: 45px;
-                animation: animationTextShow 2.3s forwards;
+                gap: 25px;
+                animation: animationTextShow 2s forwards;
                 .seeprojetos {
-                    background-color: #181818;
-                    padding: 1rem 2rem;
+                    background-color: rgb(0, 0, 0);
+                    padding: .7rem 2rem;
+                    font-weight: bold;
                     color: #fff;
                     background-image: linear-gradient(rgba(255,255,255,.1), #0e0e0e00,#0e0e0e00, #0e0e0e00);
                 }
                 a {
                     color: $color-dark;
+                    color: rgb(0, 0, 0);
+                    font-weight: bold;
                 }
             }
             .textcircle {
