--- a/sections/_projetos.scss
+++ b/sections/_projetos.scss
@@ -1,25 +1,33 @@
 @import '../abstract/variables';
 
 #projetos {
-    max-width: 1200px;
+    max-width: 1400px;
     width: 100%;
     margin: 0 auto;
-    background-color: $color-bg;
+    background-color: #f5f5f5;
     padding: 1.5rem 1rem;
     .textproject {
-        .titlepageproject {
-            font-size: 2rem;
-            font-weight: 600; 
-            margin-bottom: 2rem;
-            text-align: center;
-            }
+      .titlesobre {
+        font-size: 2rem;
+        font-weight: 600;
+        display: flex;
+        align-items: center;
+        margin: 2rem 0rem;
+        &::after {
+            content: '';
+            width: 80%;
+            height: 2px;
+            background-color: #e7e7e7;
+            margin-left: 1.5rem;
+        }
+    }
             .row {
                 display: flex;
                 justify-content: space-between;
                 flex-wrap: wrap;
-                gap: 50px;
+                gap: 20px;
                 .card {
-                    width: 350px;
+                    width: 570px;
                       .wrapper {
                         background-color: #000;
                         height: 400px;
@@ -36,7 +44,7 @@
                           left: 0;
                           width: 100%;
                           height: 100%;
-                          background:  rgb(0, 217, 255);
+                          background:  rgb(0, 0, 0);
                           transition: top 0.5s ease; 
                         }
                         &:hover::before {
@@ -46,7 +54,7 @@
                             position: absolute;
                             bottom: 0;
                             width: 100%;
-                            transform: translateY(calc(145px + 1em));
+                            transform: translateY(calc(200px + 1em));
                             transition: transform 0.3s;
                             z-index: 1;
                             .content {
@@ -56,7 +64,7 @@
                                     color: #a7a7a7;
                                 }
                                 .text {
-                                    color: #000;
+                                    color: #ffffff;
                                 }
                             }
                           }
@@ -67,21 +75,21 @@
                 }
                 .project1, .project2, .project3 {
                       .titleproject {
-                        color: #000;
+                        color: #ffffff;
                         font-size: 2rem;
                       }
                       .text {
                         margin: 15px 0 10px 0;
                       }
                       .linkto {
-                        color: #000;
+                        color: #ffffff;
                         display: flex;
                         justify-content: center;
                         align-items: center;
                         padding: 1rem 0rem;
                         margin: 1.5rem 0rem;
-                        background-color: #000;
-                        color: #fff;
+                        background-color: #ffffff;
+                        color: #000000;
                         &::after {
                           content: '\2192';
                           opacity: 0;
@@ -100,10 +108,10 @@
                       }
                 }
                 .project1  .wrapper {
-                    background: url(../assets/testdsm.jpg) center / cover no-repeat;
+                    background: url(../assets/dsmbg.jpg) center / cover no-repeat;
                   }
                 .project2  .wrapper {
-                    background: url(../assets/testjapa.jpg) center / cover no-repeat;
+                    background: url(../assets/japabg.jpg) center / cover no-repeat;
                 }
                 .project3  .wrapper {
                     background: url(../assets/testrx.jpg) center / cover no-repeat;
