--- a/components/_contentmenuhamburger.scss
+++ b/components/_contentmenuhamburger.scss
@@ -1,4 +1,5 @@
 @import '../abstract/variables';
+
 .mobileMenuContent {
   display: none;
   .divisorcontent {
@@ -117,8 +118,6 @@
   }
 }
 
-
-
 .mobileMenuContent.ativo {
   display: block;
   height: 100vh;
@@ -130,6 +129,22 @@
   z-index: 777;
   animation: animationMenu .5s ease-in-out;
   box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+}
+.overlay {
+  display: none;
+}
+
+.overlay.ativo {
+  display: block;
+  transition: 2s;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(3px);
+  z-index: 500;
 }
 
 @keyframes animationMenu {
