--- a/styles/styles.css
+++ b/styles/styles.css
@@ -544,6 +544,24 @@ main .mainsize .textmain .textcircle {
   box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
 
+.overlay {
+  display: none;
+}
+
+.overlay.ativo {
+  display: block;
+  transition: 2s;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
+  z-index: 500;
+}
+
 @keyframes animationMenu {
   from {
     transform: translate3d(100%, 0, 0);
