feat: change header, main and start to create other footer

--- a/components/_contentmenuhamburger.scss
+++ b/components/_contentmenuhamburger.scss
@@ -58,7 +58,7 @@
               color: #2c84d4;
             }
             &:hover i {
-              color: #2c84d4;
+              color: rgb(44, 132, 212);
             }
             a {
               color: #000;
