--- a/components/_header.scss
+++ b/components/_header.scss
@@ -17,85 +17,30 @@ header {
             align-items: center;
             gap: 10px;
             h1 {
-                font-weight: 800;
-                font-size: 3rem;
+                font-size: 1.4rem;
                 color: $color-dark;
             }
-            #title {
-                margin-top: 5px;
-                cursor: pointer;
-                h1 {
-                    font-size: 1rem;
-                    color: $color-dark;
-                    font-weight: 700;
-                }
-                .profile {
-                    h3 {
-                        font-size: .9rem;
-                        color: $color-dark;
-                        overflow: hidden;
-                        position: relative;
-                        display: inline-block;
-                        span {
-                            display: inline-block;
-                            transition: transform .3s cubic-bezier(0.76, 0, 0.24, 1);
-                            color: $color-dark;
-                        }
-                        &::before, &::after {
-                            content: '';
-                            position: absolute;
-                            width: 100%;
-                            left: 0;
-                        }
-                        &::after {
-                            content: attr(data-replace);
-                            height: 100%;
-                            top: 0;
-                            transform-origin: 50% 100%;
-                            transform: translate3d(0, 100%, 0);
-                            transition: transform .3s cubic-bezier(0.76, 0, 0.24, 1);
-                            color: #a1a1a1;
-                        }
-                        &:hover::before {
-                            transform-origin: 50% 50%;
-                            transform: scaleY(0);
-                        }
-                        &:hover::after {
-                            transform: translate3d(0, 0, 0);
-                        }
-                        &:hover span {
-                            transform: translate3d(0, 100%, 0);
-                        }
-                    }
-                }
+        }
+        .finalheader {
+            display: flex;
+            gap: 30px;
+            a {
+                border: 1px solid #000;
+                border-radius: 30px;
+                padding: .5rem 1rem;
             }
         }
         .menuhamburger {
             display: flex;
             flex-direction: column;
-            gap: 9px;
+            gap: 7px;
             cursor: pointer;
             justify-content: center;
             align-items: center;
             span {
                 width: 50px;
-                height: 3px;
+                height: 2px;
                 background-color: $color-dark;
-            }
-        }
-        .disponiveltowork {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            span {
-                border-radius: 100%;
-                width: 8px;
-                height: 8px;
-                background-color: rgb(0, 131, 0);
-                animation: pulse 1s infinite alternate;
-            }
-            p {
-                color: $color-dark;
             }
         }
     }
