--- a/sections/_footer.scss
+++ b/sections/_footer.scss
@@ -1,11 +1,19 @@
 @import '../abstract/variables';
 
-footer {
+#contact {
     height: 60vh;
     background-color: $color-bg;
+    padding: 5rem 1rem 3rem 1rem;
     display: flex;
-    max-width: 1700px;
+    flex-direction: column;
     width: 100%;
-    margin: 0 auto;
-    padding: 1.5rem 1rem;
+    .containercontact {
+        max-width: 1400px;
+        margin: 0 auto;
+        width: 100%;
+        .linkscontact {
+            display: flex;
+            justify-content: space-between;
+        }
+    }
 }
