--- a/styles/styles.css
+++ b/styles/styles.css
@@ -148,83 +148,30 @@ header .headersize .titleprofile {
   gap: 10px;
 }
 header .headersize .titleprofile h1 {
-  font-weight: 800;
-  font-size: 3rem;
+  font-size: 1.4rem;
   color: #1b1b1b;
 }
-header .headersize .titleprofile #title {
-  margin-top: 5px;
-  cursor: pointer;
+header .headersize .finalheader {
+  display: flex;
+  gap: 30px;
 }
-header .headersize .titleprofile #title h1 {
-  font-size: 1rem;
-  color: #1b1b1b;
-  font-weight: 700;
-}
-header .headersize .titleprofile #title .profile h3 {
-  font-size: 0.9rem;
-  color: #1b1b1b;
-  overflow: hidden;
-  position: relative;
-  display: inline-block;
-}
-header .headersize .titleprofile #title .profile h3 span {
-  display: inline-block;
-  transition: transform 0.3s cubic-bezier(0.76, 0, 0.24, 1);
-  color: #1b1b1b;
-}
-header .headersize .titleprofile #title .profile h3::before, header .headersize .titleprofile #title .profile h3::after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  left: 0;
-}
-header .headersize .titleprofile #title .profile h3::after {
-  content: attr(data-replace);
-  height: 100%;
-  top: 0;
-  transform-origin: 50% 100%;
-  transform: translate3d(0, 100%, 0);
-  transition: transform 0.3s cubic-bezier(0.76, 0, 0.24, 1);
-  color: #a1a1a1;
-}
-header .headersize .titleprofile #title .profile h3:hover::before {
-  transform-origin: 50% 50%;
-  transform: scaleY(0);
-}
-header .headersize .titleprofile #title .profile h3:hover::after {
-  transform: translate3d(0, 0, 0);
-}
-header .headersize .titleprofile #title .profile h3:hover span {
-  transform: translate3d(0, 100%, 0);
+header .headersize .finalheader a {
+  border: 1px solid #000;
+  border-radius: 30px;
+  padding: 0.5rem 1rem;
 }
 header .headersize .menuhamburger {
   display: flex;
   flex-direction: column;
-  gap: 9px;
+  gap: 7px;
   cursor: pointer;
   justify-content: center;
   align-items: center;
 }
 header .headersize .menuhamburger span {
   width: 50px;
-  height: 3px;
+  height: 2px;
   background-color: #1b1b1b;
-}
-header .headersize .disponiveltowork {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-header .headersize .disponiveltowork span {
-  border-radius: 100%;
-  width: 8px;
-  height: 8px;
-  background-color: rgb(0, 131, 0);
-  animation: pulse 1s infinite alternate;
-}
-header .headersize .disponiveltowork p {
-  color: #1b1b1b;
 }
 
 @keyframes pulse {
@@ -310,7 +257,7 @@ main {
   position: relative;
 }
 main .mainsize {
-  padding: 12rem 0rem;
+  padding: 9rem 0rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -320,22 +267,101 @@ main .mainsize .textmain {
   height: 30%;
   display: flex;
   flex-direction: column;
+  /* 
+  #title {
+      cursor: pointer;
+      margin: 1.5rem 0rem .5rem 0rem;
+      animation: animationTextShow 2s forwards;
+      h1 {
+          font-size: 4rem;
+          color: $color-dark;
+          font-weight: 700;
+      }
+      .profile {
+          h3 {
+              font-size: 4rem;
+              color: $color-dark;
+              overflow: hidden;
+              position: relative;
+              display: inline-block;
+              span {
+                  font-size: 4rem;
+                  display: inline-block;
+                  transition: transform .3s cubic-bezier(0.76, 0, 0.24, 1);
+                  color: $color-dark;
+              }
+              &::before, &::after {
+                  content: '';
+                  position: absolute;
+                  width: 100%;
+                  left: 0;
+              }
+              &::after {
+                  content: attr(data-replace);
+                  height: 100%;
+                  top: 0;
+                  transform-origin: 50% 100%;
+                  transform: translate3d(0, 100%, 0);
+                  transition: transform .3s cubic-bezier(0.76, 0, 0.24, 1);
+                  color: #000000;
+              }
+              &:hover::before {
+                  transform-origin: 50% 50%;
+                  transform: scaleY(0);
+              }
+              &:hover::after {
+                  transform: translate3d(0, 0, 0);
+              }
+              &:hover span {
+                  transform: translate3d(0, 100%, 0);
+              }
+          }
+      }
+  }
+  */
 }
-main .mainsize .textmain h1 {
-  font-size: 3.5rem;
-  font-weight: 600;
+main .mainsize .textmain .mainimgwork {
+  display: flex;
+  gap: 15px;
   animation: animationTextShow 2s forwards;
+}
+main .mainsize .textmain .mainimgwork img {
+  width: 80px;
+}
+main .mainsize .textmain .mainimgwork .disponiveltowork {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+main .mainsize .textmain .mainimgwork .disponiveltowork span {
+  border-radius: 100%;
+  width: 8px;
+  height: 8px;
+  background-color: rgb(0, 131, 0);
+  animation: pulse 1s infinite alternate;
+}
+main .mainsize .textmain .mainimgwork .disponiveltowork p {
   color: #1b1b1b;
 }
-main .mainsize .textmain h1 span {
-  font-size: 3rem;
+main .mainsize .textmain .mainfocus {
+  animation: animationTextShow 2s forwards;
 }
-main .mainsize .textmain p {
-  margin: 2rem 0rem 3rem 0rem;
+main .mainsize .textmain .mainfocus h1 {
+  font-size: 5rem;
+}
+main .mainsize .textmain .introtextmain {
+  animation: animationTextShow 2s forwards;
+  margin-bottom: 1.2rem;
+}
+main .mainsize .textmain .introtextmain h3 {
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: #1b1b1b;
+}
+main .mainsize .textmain .introtextmain p {
   max-width: 60ch;
   line-height: 1.4;
   font-size: 1.2rem;
-  animation: animationTextShow 2s forwards;
   color: #525252;
 }
 main .mainsize .textmain .divmain {
@@ -355,6 +381,9 @@ main .mainsize .textmain .divmain a {
   color: #1b1b1b;
   color: rgb(0, 0, 0);
   font-weight: bold;
+  padding: 0.6rem 1.4rem;
+  border: 1px solid #000;
+  border-radius: 20px;
 }
 main .mainsize .textmain .textcircle {
   display: none;
@@ -478,7 +507,7 @@ main .mainsize .textmain .textcircle {
   color: #2c84d4;
 }
 .mobileMenuContent .divisorcontent .divisorpart1 .linksmenutoportfolio nav ul li:hover i {
-  color: #2c84d4;
+  color: rgb(44, 132, 212);
 }
 .mobileMenuContent .divisorcontent .divisorpart1 .linksmenutoportfolio nav ul li a {
   color: #000;
@@ -584,124 +613,6 @@ main .mainsize .textmain .textcircle {
     left: -10%;
   }
 }
-@keyframes animationTextShow {
-  0% {
-    transform: translate3d(0, 200%, 0);
-    height: 0;
-    transition: 0.8s all;
-    opacity: 0.2;
-  }
-  20% {
-    opacity: 0.3;
-  }
-  50% {
-    opacity: 0.6;
-  }
-  75% {
-    opacity: 0.8;
-  }
-  100% {
-    transform: translate3d(0, 0, 0);
-    transition: 0.8s all;
-    height: 100%;
-    opacity: 1;
-  }
-}
-@keyframes opacityHeadeer {
-  0% {
-    opacity: 0;
-    transition: 0.8s all;
-  }
-  100% {
-    opacity: 1;
-    transition: 0.8s all;
-  }
-}
-#contato {
-  background-color: #ffffff;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
-}
-#contato .contactsize {
-  padding: 5rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 300px;
-}
-#contato .contactsize .sobrecontato {
-  width: 30%;
-}
-#contato .contactsize .sobrecontato h1 {
-  font-size: 2rem;
-  margin-bottom: 2rem;
-  color: #fff;
-  text-transform: uppercase;
-  font-family: "Righteous", sans-serif;
-}
-#contato .contactsize .container-form {
-  width: 100%;
-}
-#contato .contactsize .container-form .form-style {
-  display: flex;
-  flex-direction: column;
-  align-items: left;
-}
-#contato .contactsize .container-form .form-style .label-form {
-  margin-bottom: 7px;
-}
-#contato .contactsize .container-form .form-style .input-style,
-#contato .contactsize .container-form .form-style .textarea-style, #contato .contactsize .container-form .form-style .textarea {
-  width: 100%;
-  border: 0;
-  padding: 0.6em;
-  padding-left: 0;
-  position: relative;
-  color: currentColor;
-  background: transparent;
-  border-bottom: 1px solid currentColor;
-}
-#contato .contactsize .container-form .form-style .name-email {
-  display: flex;
-  gap: 50px;
-  justify-content: space-between;
-}
-#contato .contactsize .container-form .form-style .name-email .every-input {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-#contato .contactsize .container-form .form-style .name-email .every-input .input-style {
-  height: 40px;
-  width: 100%;
-  padding: 15px 8px;
-}
-#contato .contactsize .container-form .form-style .message {
-  margin-top: 3rem;
-}
-#contato .contactsize .container-form .form-style .message .textarea {
-  padding: 0.6rem;
-  height: 100px;
-  padding-bottom: 3.5rem;
-}
-#contato .contactsize .container-form .form-style .button-submit-form {
-  height: 34px;
-  border-radius: 4px;
-  border: 0;
-  cursor: pointer;
-  background-color: #3f3f3f;
-  font-size: 1rem;
-  margin: 0 auto;
-  width: 30%;
-  color: #fff;
-}
-@media (max-width: 600px) {
-  #contato .contactsize .container-form .form-style .name-email {
-    flex-direction: column;
-    gap: 0px;
-  }
-}
-
 @keyframes animationTextShow {
   0% {
     transform: translate3d(0, 200%, 0);
@@ -967,12 +878,20 @@ main .mainsize .textmain .textcircle {
     transition: 0.8s all;
   }
 }
-footer {
+#contact {
   height: 60vh;
   background-color: #ffffff;
+  padding: 5rem 1rem 3rem 1rem;
   display: flex;
-  max-width: 1700px;
+  flex-direction: column;
   width: 100%;
+}
+#contact .containercontact {
+  max-width: 1400px;
   margin: 0 auto;
-  padding: 1.5rem 1rem;
+  width: 100%;
+}
+#contact .containercontact .linkscontact {
+  display: flex;
+  justify-content: space-between;
 }/*# sourceMappingURL=styles.css.map */
