--- a/abstract/_reset.scss
+++ b/abstract/_reset.scss
@@ -17,15 +17,16 @@
   font-size: 1rem;
 }
 
+.content {
+  width: 100%;
+  height: 100%;
+  background-color: #e9e7e7;
+  border-radius: 11px;
+}
+
 body {
-  background-color: #f5f5f5;
-}
-
-.sectionanima {
-  opacity: 0;
-}
-
-.sectionanima.anima {
-  opacity: 1;
-  animation: animationTextShow 1.5s forwards;
+  background-color: #1d1d1d;
+  padding: 1.1rem;
+  height: 100vh;
+  width: 100vw;
 }
