feat: hover the name of project appers a img following the cursor

--- a/components/_main.scss
+++ b/components/_main.scss
@@ -29,6 +29,13 @@ main {
         span {
             font-size: .5rem;
         }
+        nav {
+             ul {
+                li {
+                    cursor: pointer;
+                }
+             }
+        }
     }
     .midias {
         display: flex;
