--- a/abstract/_reset.scss
+++ b/abstract/_reset.scss
@@ -103,3 +103,16 @@ body {
 
       
 }
+
+@keyframes fadeIn {
+  from {
+      opacity: 0;
+  }
+  to {
+      opacity: 1;
+  }
+}
+
+.fade-in {
+  animation: fadeIn 3s forwards;
+}
