--- a/styles/styles.css
+++ b/styles/styles.css
@@ -98,16 +98,31 @@ body {
   }
 }
 
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.fade-in {
+  animation: fadeIn 3s forwards;
+}
+
 main {
   display: flex;
   flex-direction: column;
   padding: 2rem;
 }
+main .description {
+  margin-bottom: 1.2rem;
+}
 main .description .title span {
   font-size: 1px;
 }
 main .description .title h1 {
-  font-size: 1.5rem;
+  font-size: 5rem;
 }
 main .description .textsdescription span {
   font-size: 1px;
@@ -115,15 +130,23 @@ main .description .textsdescription span {
 main .description .textsdescription p {
   max-width: 40ch;
   font-size: 1.1rem;
+  margin: 10px 0;
 }
 main .links {
-  margin-top: 1.5rem;
+  margin-top: 1rem;
 }
 main .links span {
   font-size: 0.5rem;
 }
+main .links nav ul {
+  display: flex;
+  flex-direction: column;
+}
 main .links nav ul li {
   cursor: pointer;
+}
+main .links nav ul .indexcontent {
+  color: #000000;
 }
 main .midias {
   display: flex;
@@ -140,6 +163,7 @@ main .midias .underline {
   text-decoration: none;
   color: var(--color);
   position: relative;
+  width: 87px;
 }
 main .midias .underline span {
   background-image: linear-gradient(0deg, var(--line) 0%, var(--line) 100%);
@@ -190,6 +214,7 @@ main .midias .underline:hover {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  animation: ShowingContent 0.7s forwards;
 }
 .contentpages .home {
   text-align: left;
@@ -233,4 +258,15 @@ main .midias .underline:hover {
 .contentpages .project .containerproject .projecttexts a:hover .hoverimage {
   display: block;
   z-index: 20;
+}
+
+@keyframes ShowingContent {
+  from {
+    transform: translateY(200%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }/*# sourceMappingURL=styles.css.map */
