--- a/pages/_pages.scss
+++ b/pages/_pages.scss
@@ -23,6 +23,7 @@
             max-width: 30ch;
             font-size: 1rem;
             text-align: left;
+            margin: 10px 0;
         }
     }
     .project {
