feat: add particejs

--- a/components/_main.scss
+++ b/components/_main.scss
@@ -5,6 +5,7 @@ main {
     flex-direction: column;
 
     padding: 2rem;
+    position: absolute;
     .description {
         margin-bottom: 1.2rem;
         .title {
