--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,11 +1,12 @@
 .container {
     width: 100%;
-    height: 3vh;
+    height: 3.8vh;
 
     display: flex;
     justify-content: space-between;
     background-color: #1c1c1c;
-    align-items: center;
+    align-items: center;`
+    border-bottom: 1px solid #525252;
 }
 
 .header1 {
@@ -22,6 +23,7 @@
         color: #fff;
         font-size: .7rem;
         font-weight: 300;
+        cursor: pointer;
     }
 }
 
