--- a/src/pages/Side.css
+++ b/src/pages/Side.css
@@ -1,15 +1,13 @@
 aside {
-    position: absolute;
+    position: relative;
     left: 0;
     height: calc(100vh - 3.8vh - 2.5vh);
-    width: 2.5%;
-    background-color: #181818;
-    border-right: 1px solid #525252;
-
+    width: 3%;
+        background-color: rgb(24, 24, 24);
+        border-right: 2px solid rgb(43, 43, 43);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 1rem 0rem;
 
     svg {
         color: #fff;
@@ -18,11 +16,35 @@ aside {
 
 .aside1,
 .aside2 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    svg {
+    width: 100%;
+        padding-right: .2rem;
+    
+        .iconaside {
+            background-color: transparent;
+            border: none;
             cursor: pointer;
+            display: grid;
+            height: 50px;
+            place-content: center;
+            position: relative;
+            width: 100%;
+    
+            span {
+                background-color: #181818;
+                height: 100%;
+                left: 1px;
+                position: absolute;
+                width: 1.5px;
+            }
+        }
+    
+        .iconaside.active {
+            span {
+                background-color: #005d6d;
+            }
+        }
+    svg {
+        cursor: pointer;
+        color: #7e7b74;
         }
 }
