--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -6,7 +6,7 @@ main {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-
+    position: relative;
     svg {
         color: #222222;
     }
