--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,12 @@
   font-family: Segoe WPC, Segoe UI, sans-serif;
 }
 
+.interface {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
 body {
   background-color: #2e2e2e;
   overflow: hidden;
@@ -19,4 +25,5 @@ body {
 
 .local {
   display: flex;
+  position: relative;
 }
