--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -1,14 +1,14 @@
 main {
     width: 100%;
-    height: calc(100vh - 3.8vh);
+    height: 100vh;
     margin-left: 55px;
+}
 
+.tabcontainer {
+    width: 100%;
+    height: 4vh;
+    background-color: rgb(31, 31, 31);
+    margin-top: 0; 
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    position: relative;
-    svg {
-        color: #222222;
-    }
+    z-index: 600;
 }
