--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -1,6 +1,6 @@
 main {
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 6.3vh);
     margin-left: 55px;
 }
 
@@ -11,4 +11,13 @@ main {
     margin-top: 0; 
     display: flex;
     z-index: 600;
+}
+
+.pagetab {
+    display: none;
+}
+
+.pagetab.active {
+    display: flex;
+    flex-direction: column;
 }
