--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -1,17 +1,10 @@
 .containerContact {
-    height: 100vh;
+    height: calc(100vh - 6.3vh);
     width: 100%;
 
     display: flex;
     flex-direction: column;
     align-content: center;
     align-items: center;
-}
-
-.quadrado {
-    width: 500px;
-    height: 600px;
-    background-color: brown;
-
-    display: block;
+    margin-left: 55px;
 }
