--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -4,7 +4,17 @@
 
     display: flex;
     flex-direction: column;
-    align-content: center;
     align-items: center;
     margin-left: 55px;
+}
+.contactsize {
+    position: absolute;
+    left: 80px;
+    top: 50px;
+
+    display: flex;
+
+    h1 {
+        color: #fff;
+    }
 }
