--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -4,21 +4,49 @@
     height: calc(100vh - 6.3);
     width: 100%;
 }
+/* 
 .infoHome {
-    margin: 20rem 0rem 0rem 20rem;
+    height: 100vh;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-
+    margin-left: 22rem;
     h1 {
         font-size: 4rem;
         font-family: 'Montserrat', sans-serif;
     }
-
     h2 {
         font-size: 2rem;
         font-family: 'Montserrat', sans-serif;
         color: #b9b9b9;
-        margin-left: .8rem;
+    
+    }
+    p {
+        font-size: 1rem;
+        font-family: 'Montserrat', sans-serif;
+        color: #b9b9b9;
+        margin-top: .5rem;
     }
 }
+    
+.linkshome {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-top: 1.5rem;
+    a {
+        color: #fff;
+        background-color: rgb(0, 153, 180);
+        padding: .5rem 2rem;
+    } 
+}
+
+.wallpaperMain {
+    position: absolute;
+    right: -20%;
+    bottom: 0;
+    transform: rotate(110deg);
+    width: 70%;
+    z-index: 0;
+} */
