--- a/src/pages/Layout/Header.css
+++ b/src/pages/Layout/Header.css
@@ -1,7 +1,7 @@
 .container {
     width: 100%;
     height: 3.8vh;
-
+    z-index: 200;
     display: flex;
     justify-content: space-between;
     background-color: rgb(31, 31, 31);
@@ -9,11 +9,19 @@
     border-bottom: 2px solid (43, 43, 43);
 }
 
+.hamburger {
+    display: none;
+    @media (max-width: 750px) {
+        display: block;
+    }
+}
+
 .header1 {
     display: flex;
     gap: 5px;
     align-items: center;
 
+    
     svg {
         margin-left: 1rem;
         color: #fff;
@@ -21,6 +29,9 @@
     }
 
     p {
+        @media (max-width: 750px) {
+            display: none;
+        }
         color: #fff;
         font-size: .7rem;
         font-weight: 300;
