--- a/src/pages/Layout/Side.css
+++ b/src/pages/Layout/Side.css
@@ -1,10 +1,12 @@
 aside {
     position: fixed;
     
-    z-index: 999;
+    z-index: 100;
     left: 0;
-    height: calc(100vh - 3.8vh - 2.5vh);
+    height: 100%;
     width: 55px;
+
+    padding-bottom: 4rem;
 
     background-color: rgb(24, 24, 24);
     border-right: 2px solid rgb(43, 43, 43);
