--- a/src/pages/Layout/TabFiles.css
+++ b/src/pages/Layout/TabFiles.css
@@ -1,7 +1,7 @@
 .tabcontainer {
     width: 100%;
     height: 4vh;
-
+    z-index: 150;
     background-color: rgb(31, 31, 31);
     position: absolute;
     top: 0%;
