--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -3,23 +3,35 @@
 
     height: calc(100vh - 6.3);
     width: 100%;
+    @media (max-width: 800px) {
+        padding: 1rem;
+    }
 }
-/* 
+
 .infoHome {
     height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-left: 22rem;
+    margin-left: 200px;
+    @media (max-width: 800px) {
+        margin-left: 60px;
+    }
     h1 {
         font-size: 4rem;
         font-family: 'Montserrat', sans-serif;
+        @media (max-width: 800px) {
+            font-size: 2rem;
+        }
     }
     h2 {
         font-size: 2rem;
         font-family: 'Montserrat', sans-serif;
         color: #b9b9b9;
+        @media (max-width: 800px) {
+            font-size: 1.2rem;
+        }
     
     }
     p {
@@ -27,6 +39,9 @@
         font-family: 'Montserrat', sans-serif;
         color: #b9b9b9;
         margin-top: .5rem;
+        @media (max-width: 800px) {
+            max-width: 30ch;
+        }
     }
 }
     
@@ -43,10 +58,13 @@
 }
 
 .wallpaperMain {
-    position: absolute;
-    right: -20%;
+    position: fixed;
+    right: -500px;
     bottom: 0;
     transform: rotate(110deg);
-    width: 70%;
+    width: 1300px;
     z-index: 0;
-} */
+    @media (max-width: 1200px) {
+        display: none;
+    }
+}
