--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -9,8 +9,8 @@
 }
 .contactsize {
     position: absolute;
-    left: 100px;
-    top: 80px;
+    left: 75px;
+    top: 60px;
     display: flex;
     @media (max-width: 450px) {
         left: 50px;
@@ -22,26 +22,29 @@
     h1 {
         color: #999898;
         font-family: 'Montserrat', sans-serif;
-        font-size: 1.5rem;
-        margin-bottom: 1.7rem;
+        font-size: 1.2rem;
+        margin-bottom: 1rem;
     }
 }
 .socialmediascontact {
     counter-reset: line;
-    font-size: 1.2rem;
     line-height: 2rem;
     p {
         font-family: 'Montserrat', sans-serif;
-         color: #c0c0c0;
+         color: #757575;
         display: flex;
         align-items: center;    
         gap: 10px;
+        font-size: 1.2rem;
         a {
-            color: #c0c0c0;
-            text-decoration: underline;
+            color: #ffffff;
+            font-size: 1.2rem;
+            &:hover {
+                text-decoration: underline;
+            }
         }
         @media (max-width: 450px) {
-            font-size: .9rem;
+            font-size: .85rem;
         }
     }
 }
@@ -50,8 +53,4 @@
     counter-increment: line;
     margin-right: 1rem;
     color: grey;
-}
-
-.socialmediascontact p::after:nth-child(2) {
-    margin-right: 2rem;
 }
